--- a/css/app.css
+++ b/css/app.css
@@ -84,9 +84,29 @@ h1 {
   visibility: hidden;
 }
 
+.deck .card.open .image {
+  visibility: visible;
+}
+
+.deck .card.match .image {
+  visibility: visible;
+}
+
+.deck .card.unmatch .image {
+  visibility: visible;
+}
+
 .deck .card.open {
     transform: rotateY(0);
     background: #02b3e4;
+    padding: 0px 10px 10px 0px;
+    cursor: default;
+}
+
+.deck .card.unmatch {
+    transform: rotateY(0);
+    background: red;
+    padding: 0px 10px 10px 0px;
     cursor: default;
 }
 
@@ -95,9 +115,10 @@ h1 {
 }
 
 .deck .card.match {
-    cursor: default;
+    transform: rotateY(0);
     background: #02ccba;
-    font-size: 33px;
+    padding: 0px 10px 10px 0px;
+    cursor: default;
 }
 
 /*
@@ -108,6 +129,13 @@ h1 {
     text-align: left;
     width: 345px;
     margin-bottom: 10px;
+}
+
+.score-panel .clock {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  margin: 0 30px 0 0;
 }
 
 .score-panel .stars {
@@ -125,6 +153,7 @@ h1 {
 .score-panel .restart {
     float: right;
     cursor: pointer;
+    margin: 0 5px 0 0;
 }
 
 footer {
