feat: Added color background to cardsArray
Implemented three colors that displayed flipped, matched and not
matched cards

--- a/css/app.css
+++ b/css/app.css
@@ -13,8 +13,8 @@
 
 /* Modal Animation */
 @keyframes animateModal {
-  from {top: -300px; opacity: 0}
-  to {top: 0; opacity: 1}
+  from {top: -300px; opacity: 0;}
+  to {top: 0; opacity: 1;}
 }
 
 html {
